# ddproc

./: .gitignore  README.md  pyproject.toml
ddproc/: __init__.py  api.py
